# machine-learning-from-scratch

./: .gitignore  CMakeLists.txt  Matrix.c  Matrix.h  MatrixGPU.cu  MatrixGPU.cuh  NeuralNetwork.c  NeuralNetwork.cu  NeuralNetwork.cuh  NeuralNetwork.h  andOr.c  line.c  main.c  mnist.c  mnist.cu  mnist.cuh  mnist.h  saveNN.c  saveNN.h
NNs/: testNN2-28.nn  testNN2-28v2.nn  testNN2-28v3.nn  testNN2-28v4.nn  testNN2-28v5.nn  testNN3-60v1.nn  testNN3-60v2.nn  testNN3-60v3.nn  testNN3-60v4.nn  testNN3.nn
